@@ -180,8 +180,8 @@ function truncateTable($db, $tableName, $runQueries)
 	//	Other				6070/6000	6050/6000
 	//	Other				8010/8000	8050/8000
 
-	convertTable($db, $nZEDB_schema, "releases", "INSERT INTO " . $nZEDB_schema . ".releases (`adddate`, `anidbID`, `bookinfoID`, `categoryID`, `comments`, `completion`, `consoleinfoID`, `episode`, `fromname`, `grabs`, `groupID`, `guid`, `haspreview`, `ID`, `imdbID`, `musicinfoID`, `name`, `passwordstatus`, `postdate`, `rageID`, `rarinnerfilecount`, `searchname`, `season`, `seriesfull`, `size`, `totalpart`, `tvairdate`, `tvtitle`) " .
-				"SELECT `adddate`, `anidbID`, `bookinfoID`, case `categoryID` when 7030 then 8020 when 7020 then 8010 when 7010 then 8030 when 6050 then 6070 when 2060 then 2050 when 2050 then 2060 when 7000 then 8000 when 6070 then 6050 when 8010 then 8050 else categoryID end, `comments`, `completion`, `consoleinfoID`, `episode`, `fromname`, `grabs`, `groupID`, `guid`, `haspreview`, `ID`, `imdbID`, `musicinfoID`, `name`, `passwordstatus`, `postdate`, `rageID`, `rarinnerfilecount`, `searchname`, `season`, `seriesfull`, `size`, `totalpart`, `tvairdate`, `tvtitle` FROM " . $nn_schema . ".`releases`", $runQueries);
+	convertTable($db, $nZEDB_schema, "releases", "INSERT INTO " . $nZEDB_schema . ".releases (`adddate`, `anidbID`, `bookinfoID`, `categoryID`, `comments`, `completion`, `consoleinfoID`, `episode`, `fromname`, `grabs`, `groupID`, `guid`, `haspreview`, `ID`, `imdbID`, `musicinfoID`, `name`, `passwordstatus`, `postdate`, `rageID`, `rarinnerfilecount`, `searchname`, `season`, `seriesfull`, `size`, `totalpart`, `tvairdate`, `tvtitle`, `gid`) " .
+				"SELECT `adddate`, `anidbID`, `bookinfoID`, case `categoryID` when 7030 then 8020 when 7020 then 8010 when 7010 then 8030 when 6050 then 6070 when 2060 then 2050 when 2050 then 2060 when 7000 then 8000 when 6070 then 6050 when 8010 then 8050 else categoryID end, `comments`, `completion`, `consoleinfoID`, `episode`, `fromname`, `grabs`, `groupID`, `guid`, `haspreview`, `ID`, `imdbID`, `musicinfoID`, `name`, `passwordstatus`, `postdate`, `rageID`, `rarinnerfilecount`, `searchname`, `season`, `seriesfull`, `size`, `totalpart`, `tvairdate`, `tvtitle`, `nzb_guid` FROM " . $nn_schema . ".`releases`", $runQueries);
 
 	convertTable($db, $nZEDB_schema, "releasesubs", "INSERT INTO " . $nZEDB_schema . ".releasesubs (releaseID, subsID, subslanguage) " .
 				"SELECT `releaseID`, `subsID`, `subslanguage` FROM " . $nn_schema . ".releasesubs", $runQueries);
